<resources>
    <string name="app_name">Engineer Saba Indomedika</string>
    <string name="app_name_louncher">ESI</string>
    <string name="list_tiket">List Tiket</string>
    <string name="act_saba">Activity Saba</string>
    <string name="sm_om"><![CDATA[SM & OM]]></string>
    <string name="list_project">List Project</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="title_activity_list_tiket">"List Tiket "</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="all">All</string>
    <string name="open">Open Tiket</string>
    <string name="confirm">Confirm</string>
    <string name="on_progress_new">On Progress (New)</string>
    <string name="on_progress_hold">On Progress (Hold)</string>
    <string name="on_hold">On Hold</string>
    <string name="endded">Ended</string>

    <string name="nama_customer">Bambang HS</string>
    <string name="tipe_alat">Tipe Alat</string>
    <string name="sn_alat">123456789</string>
    <string name="time">20/07/2017</string>
    <string name="ipsum_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="urgency_level">Urgency Level</string>
    <string name="no_hp">No HP :</string>
    <string name="hold">Hold</string>
    <string name="end">End</string>
    <string name="nama_analis">Nama analis :</string>
    <string name="no_proses">1003</string>
    <string name="kategori">Kategori :</string>
    <string name="status_alat">Status Alat :</string>
    <string name="trive_time">Travel Time</string>
    <string name="star_activity">Start Activity</string>
    <string name="decs_kegiatan">Deskripsi kegiatan</string>
    <string name="end_activity">End Activity</string>
    <string name="nama_dokumen">Nama Dokumen</string>
    <string name="star">Start</string>
    <string name="sparepart_usage_replace">Spare part / Usage / replace</string>
    <string name="done">Done</string>
    <string name="part_num">Part Number</string>
    <string name="des">Description</string>
    <string name="qty">Qty</string>
    <string name="status">Status</string>
    <string name="ket">Keterangan</string>
    <string name="continuee">Continue</string>
    <string name="judul">Judul</string>
    <string name="error_message">Error / Message</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="registration_button">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="no_text"> </string>
    <string name="registration_message">You are client. Use the SABA customer application.</string>
    <string name="registration_failed">Your email or password is already in use</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="Start">Start :</string>
    <string name="Ended">End :</string>
    <string name="description_saba_activity">Description Saba Activity</string>

    <string-array name="spinner">
        <item>Repair</item>
        <item>Re-Occurrence</item>
        <item>Repair Follow Up</item>
        <item>Phone Fix</item>
        <item>On Job Training</item>
        <item>Dsb</item>
    </string-array>
</resources>
