<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_margin="@dimen/margitn_5dp"
  android:orientation="vertical"
  tools:context="id.geekgarden.esi.listtiket.DetailEnded">

  <LinearLayout
    android:weightSum="2"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
      android:orientation="vertical"
      android:layout_weight="1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
        android:text="@string/nama_analis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <TextView
        android:text="@string/no_hp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <TextView
        android:text="@string/tipe_alat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <TextView
        android:text="@string/urgency_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
      android:layout_weight="1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <TextView
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/no_proses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <TextView
        android:gravity="center"
        android:text="@string/sn_alat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <TextView
        android:text="@string/kategori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <TextView
        android:text="@string/status_alat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>
  </LinearLayout>
  <TextView
    android:layout_margin="@dimen/margitn_5dp"
    android:maxLines="5"
    android:text="@string/ipsum_desc"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
  <TextView
    android:textStyle="bold"
    android:textSize="16sp"
    android:layout_marginTop="@dimen/margitn_5dp"
    android:text="@string/act_saba"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
  <ListView
    android:id="@+id/lvLaporab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>
</LinearLayout>

