<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_margin="@dimen/activity_horizontal_margin"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
      android:layout_marginStart="5dp"
      android:text="@string/nama_customer"
      android:id="@+id/tvNamaCustomer"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
    <TextView
      android:layout_marginStart="5dp"
      android:text="@string/tipe_alat"
      android:layout_toEndOf="@+id/tvNamaCustomer"
      android:id="@+id/tvTipeAlat"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
    <TextView
      android:layout_marginStart="5dp"
      android:text="@string/sn_alat"
      android:layout_toEndOf="@+id/tvTipeAlat"
      android:id="@+id/tvSnAlat"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
    <TextView
      android:text="@string/time"
      android:layout_alignParentEnd="true"
      android:id="@+id/tvTime"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

  </RelativeLayout>
  <TextView
    android:id="@+id/tvDescTiket"
    android:textAlignment="textStart"
    android:maxLines="3"
    android:padding="5dp"
    android:text="@string/ipsum_desc"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <TextView
        android:layout_alignParentStart="true"
        android:id="@+id/tvLevel"
        android:textColor="@color/colorPrimary"
        android:layout_margin="5dp"
        android:text="@string/urgency_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_alignParentEnd="true"
        android:id="@+id/tvStatus"
        android:textColor="@color/colorPrimary"
        android:layout_margin="5dp"
        android:text="@string/urgency_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
  </RelativeLayout>

</LinearLayout>