<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_margin="@dimen/margitn_5dp"
  tools:context="id.geekgarden.esi.listtiket.Sparepart"
  android:orientation="vertical">
  <TableLayout
    android:stretchColumns="0.1"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TableRow
      android:weightSum="5"
      android:layout_width="match_parent">
      <TextView
        android:background="@drawable/cell_shape"
        android:gravity="center"
        android:text="@string/part_num"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <TextView
        android:background="@drawable/cell_shape"
        android:gravity="center"
        android:text="@string/des"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <TextView
        android:background="@drawable/cell_shape"
        android:gravity="center"
        android:text="@string/qty"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <TextView
        android:background="@drawable/cell_shape"
        android:gravity="center"
        android:text="@string/status"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
      <TextView
        android:background="@drawable/cell_shape"
        android:gravity="center"
        android:text="@string/ket"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </TableRow>
    <ListView
      android:id="@+id/lvPart"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
  </TableLayout>

  <Button
    android:layout_alignParentBottom="true"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:text="@string/done"
    android:textColor="#fff"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
  </RelativeLayout>
