<?xml version="1.0" encoding="utf-8"?>
<TableRow
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="horizontal"
  xmlns:android="http://schemas.android.com/apk/res/android">
  <TextView
    android:background="@drawable/cell_shape"
    android:gravity="center"
    android:text="@string/no_proses"
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
  <TextView
    android:background="@drawable/cell_shape"
    android:gravity="center"
    android:text="@string/ipsum_desc"
    android:layout_weight="1"
    android:maxLength="10"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
  <TextView
    android:background="@drawable/cell_shape"
    android:gravity="center"
    android:text="10"
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
  <TextView
    android:background="@drawable/cell_shape"
    android:gravity="center"
    android:text="@string/status"
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
  <TextView
    android:background="@drawable/cell_shape"
    android:gravity="center"
    android:text="@string/ket"
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
</TableRow>