<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorPrimaryGray"
  tools:context="id.geekgarden.esi.listtiket.activityticketstaff.DetailDialihkan">
  <LinearLayout
    android:id="@+id/lyt_01"
    android:weightSum="2"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
      android:layout_margin="5dp">
    <LinearLayout
      android:orientation="vertical"
      android:layout_weight="1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TextView
        android:text="@string/nama_analis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
          android:textColor="@color/colorRedPastel"/>
      <TextView
        android:text="@string/no_hp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
          android:textColor="@color/colorRedPastel"/>
      <TextView
        android:text="@string/tipe_alat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
          android:textColor="@color/colorCoralBlue"/>
      <TextView
        android:text="@string/urgency_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
          android:textColor="@color/colorRedPastel"/>
    </LinearLayout>
    <LinearLayout
      android:layout_weight="1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <TextView
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/no_proses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
          android:textColor="@color/colorRedPastel"/>
      <TextView
        android:gravity="center"
        android:text="@string/sn_alat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
          android:textColor="@color/colorRedPastel"/>
      <TextView
        android:text="@string/kategori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
          android:textColor="@color/colorCoralBlue"/>
      <TextView
        android:text="@string/status_alat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
          android:textColor="@color/colorRedPastel"/>
    </LinearLayout>
  </LinearLayout>
  <LinearLayout
    android:layout_below="@+id/lyt_01"
    android:id="@+id/lyt_02"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
      android:layout_marginTop="100dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="2dp"
          android:text="@string/description"
          android:textColor="@color/colorCoralBlue" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/bg_descrip_opentiket"
          android:orientation="vertical">

        <TextView
            android:id="@+id/tvDescTiket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:textColor="@color/colorCoralBlue" />
      </LinearLayout>

    </LinearLayout>

    <TextView
      android:textStyle="bold"
      android:textSize="16sp"
      android:layout_marginTop="@dimen/margin_5dp"
      android:text="Resume Sercice Report"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
        android:textColor="@color/colorRedPastel"/>
    <ListView
      android:id="@+id/lvOnhold"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

  </LinearLayout>
  <ImageView
      android:id="@+id/imageView4"
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:layout_gravity="bottom"
      android:src="@drawable/bg_openticket"
      android:scaleType="centerCrop"/>
</android.support.design.widget.CoordinatorLayout>
