<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="id.geekgarden.esi.listtiket.activity.DetailOnProgress">
  <LinearLayout
      android:layout_margin="@dimen/margitn_5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
  <LinearLayout
    android:weightSum="2"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
      android:orientation="vertical"
      android:layout_weight="1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nama_analis" />

        <TextView
            android:id="@+id/tvnamaanalis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_hp" />

        <TextView
            android:id="@+id/tvnohp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tipe_alat" />

        <TextView
            android:id="@+id/tvtipealat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/urgency_level" />

        <TextView
            android:id="@+id/tvurgency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

      </LinearLayout>

    </LinearLayout>
    <LinearLayout
      android:layout_weight="1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <TextView
          android:id="@+id/tvnumber"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text="@string/no_proses"
          android:textSize="20sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/tvnamacustomer"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text="@string/sn_alat" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kategori" />

        <TextView
            android:id="@+id/tvcategory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/status_alat" />

        <TextView
            android:id="@+id/tvstatusalat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
      </LinearLayout>

    </LinearLayout>
  </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margitn_5dp"
        android:maxLines="5" />
  <LinearLayout
    android:layout_margin="@dimen/margitn_5dp"
    android:weightSum="2"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:gravity="center"
        android:layout_margin="@dimen/margitn_5dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <Spinner
          android:id="@+id/spinnerdata"
          android:layout_width="match_parent"
          android:layout_height="30dp"
          android:layout_gravity="center"
          android:layout_margin="@dimen/margitn_5dp"
          android:background="@drawable/rounded"
          android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="@dimen/margitn_5dp"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
      <TextView
        android:layout_marginEnd="@dimen/margitn_5dp"
        android:text="@string/trive_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

      <TextView
          android:id="@+id/tvtraveltime"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
    </LinearLayout>
  </LinearLayout>
  <android.support.design.widget.TextInputLayout
      android:layout_marginTop="@dimen/margitn_5dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
      android:lines="3"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />
  </android.support.design.widget.TextInputLayout>
  <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
      android:lines="3"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />
  </android.support.design.widget.TextInputLayout>
  <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
      android:lines="3"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />
  </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/ckbsparepart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sparepart_usage_replace" />
  <LinearLayout
    android:weightSum="2"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/bntHold"
      android:text="@string/hold"
      android:layout_margin="@dimen/margitn_5dp"
      android:background="@color/colorPrimary"
      android:textColor="#fff"
      android:layout_weight="1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnEnd"
      android:text="@string/end"
      android:layout_margin="@dimen/margitn_5dp"
      android:background="@color/colorPrimary"
      android:textColor="#fff"
      android:layout_weight="1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />
  </LinearLayout>
  </LinearLayout>
</ScrollView>
